--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,7 +17,7 @@
         }
         ,
         {
-            "label": "run file in ocaml",
+            "label": "run file in ocaml (faks)",
             "type": "shell",
             "command": "ocaml",
             "args": [
@@ -28,5 +28,15 @@
                }
             ]
         }
+        ,
+        {
+            "label": "OCaml doma",
+            "type": "shell",
+            "command":
+                "C:\\OCaml64\\usr\\local\\bin\\ocaml-env.exe exec -- C:\\OCaml64\\home\\admin\\.opam\\4.06.1+mingw64c\\bin\\ocaml.exe -init \\\"${file}\\\""
+        }        
     ]
+
 }
+
+
